tests/errors/first_stage/label/name_taken/name_taken.as
; defining two labels with the same name
originalName: mov r1, r2
originalName: .data 1, 2, 3